@@ -1079,99 +1079,3 @@ class ImageWindow(CurveWindow, ImageWidgetMixin):
         * panels (optional): additionnal panels (list, tuple)
     """
     pass
-
-
-#===============================================================================
-# The following classes will be removed in future versions
-#===============================================================================
-class CurvePlotWidget(CurveWidget):
-    """
-    Construct a CurveWidget object: plotting widget with integrated 
-    plot manager
-        * parent: parent widget
-        * title: plot title
-        * xlabel: (bottom axis title, top axis title) or bottom axis title only
-        * ylabel: (left axis title, right axis title) or left axis title only
-    """
-    def __init__(self, parent=None, title=None, xlabel=None, ylabel=None,
-                 section="plot", show_itemlist=False, gridparam=None):
-        CurveWidget.__init__(self, parent, title, xlabel, ylabel, section,
-                             show_itemlist, gridparam)
-        self.manager = self
-        warnings.warn("For clarity's sake, the 'CurvePlotWidget' class has "
-                      "been renamed to 'CurveWidget' (this will raise an "
-                      "exception in future versions)", FutureWarning)
-class CurvePlotDialog(CurveDialog):
-    """
-    Construct a CurveDialog object: plotting dialog box with integrated 
-    plot manager
-        * wintitle: window title
-        * icon: window icon
-        * edit: editable state
-        * toolbar: show/hide toolbar
-        * options: options sent to the :py:class:`guiqwt.curve.CurvePlot` object
-          (dictionary)
-        * parent: parent widget
-    """
-    def __init__(self, wintitle="guiqwt plot", icon="guiqwt.png",
-                 edit=False, toolbar=False, options=None, parent=None):
-        CurveDialog.__init__(self, wintitle, icon, edit, toolbar, options,
-                             parent)
-        self.manager = self
-        warnings.warn("For clarity's sake, the 'CurvePlotDialog' class has "
-                      "been renamed to 'CurveDialog' (this will raise an "
-                      "exception in future versions)", FutureWarning)
-class ImagePlotWidget(ImageWidget):
-    """
-    Construct a ImageWidget object: plotting widget with integrated 
-    plot manager
-        * parent: parent widget
-        * title: plot title (string)
-        * xlabel, ylabel, zlabel: resp. bottom, left and right axis titles 
-          (strings)
-        * yreverse: reversing Y-axis (bool)
-        * aspect_ratio: height to width ratio (float)
-        * lock_aspect_ratio: locking aspect ratio (bool)
-        * show_contrast: showing contrast adjustment tool (bool)
-        * show_xsection: showing x-axis cross section plot (bool)
-        * show_ysection: showing y-axis cross section plot (bool)
-        * xsection_pos: x-axis cross section plot position 
-          (striImageDialogng: "top", "bottom")
-        * ysection_pos: y-axis cross section plot position 
-          (string: "left", "right")
-    """
-    def __init__(self, parent=None, title="",
-                 xlabel=("", ""), ylabel=("", ""), zlabel=None, yreverse=True,
-                 colormap="jet", aspect_ratio=1.0, lock_aspect_ratio=True,
-                 show_contrast=False, show_itemlist=False, show_xsection=False,
-                 show_ysection=False, xsection_pos="top", ysection_pos="right",
-                 gridparam=None):
-        ImageWidget.__init__(self, parent, title, xlabel, ylabel, zlabel,
-                             yreverse, colormap, aspect_ratio,
-                             lock_aspect_ratio, show_contrast, show_itemlist,
-                             show_xsection, show_ysection, xsection_pos,
-                             ysection_pos, gridparam)
-        self.manager = self
-        warnings.warn("For clarity's sake, the 'ImagePlotWidget' class has "
-                      "been renamed to 'ImageWidget' (this will raise an "
-                      "exception in future versions)", FutureWarning)
-class ImagePlotDialog(ImageDialog):
-    """
-    Construct a ImageDialog object: plotting dialog box with integrated 
-    plot manager
-        * wintitle: window title
-        * icon: window icon
-        * edit: editable state
-        * toolbar: show/hide toolbar
-        * options: options sent to the :py:class:`guiqwt.image.ImagePlot` object
-          (dictionary)
-        * parent: parent widget
-    """
-    def __init__(self, wintitle="guiqwt imshow", icon="guiqwt.png",
-                 edit=False, toolbar=False, options=None, parent=None):
-        ImageDialog.__init__(self, wintitle, icon, edit, toolbar, options,
-                             parent)
-        self.manager = self
-        warnings.warn("For clarity's sake, the 'ImagePlotDialog' class has "
-                      "been renamed to 'ImageDialog' (this will raise an "
-                      "exception in future versions)", FutureWarning)
